validation of holi mocks

--- a/clustering_statistics/nb/validation_holi_mocks.ipynb
+++ b/clustering_statistics/nb/validation_holi_mocks.ipynb
@@ -68,7 +68,7 @@
     "                    _version, _weight, _cut, _auw = (versions[version][name] for name in ['version', 'weight', 'cut', 'auw'])\n",
     "                    if 'complete' in version and 'ELG' in tracer:\n",
     "                        _tracer = 'ELG_LOP'\n",
-    "                    fns = tools.get_measurement_fn(kind=kind, meas_dir=meas_dir, version=_version, tracer=_tracer, zrange=zrange, region=region, cut=_cut, weight=_weight, imock='*')\n",
+    "                    fns = tools.get_stats_fn(kind=kind, meas_dir=meas_dir, version=_version, tracer=_tracer, zrange=zrange, region=region, cut=_cut, weight=_weight, imock='*')\n",
     "                    stats = list(map(types.read, fns))\n",
     "                    means[version] = types.mean(stats).select(k=slice(0, None, rebin))#.select(k=(0., 0.3))\n",
     "                    if len(stats) > 1:\n",
